# wgpu-tutorial

./: Cargo.toml  index.html  web-start.bat
src/: barycentric.wgsl  camera.rs  helper.rs  instance.rs  lib.rs  main.rs  render.rs  shader.wgsl  shader_structs.rs  texture.rs  window.rs
