[package]
name = "wgpu-tutorial"
version = "0.1.0"
edition = "2024"

[profile.release]
strip = true

[dependencies]
anyhow = "1.0.100"
bytemuck = "1.24.0"
env_logger = "0.11.8"
log = "0.4.28"
nalgebra = "0.34.1"
pollster = "0.4.0"
wgpu = "26.0.1"
winit = { version = "0.30.12", features = ["android-native-activity"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1.6"
console_log = "1.0"
wgpu = { version = "26.0.1", features = ["webgl"]}
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4.30"
web-sys = { version = "0.3", features = [
    "Document",
    "Window",
    "Element",
]}

[lib]
crate-type = ["cdylib", "rlib"]

[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[dependencies.image]
version = "0.24"
default-features = false
features = ["png", "jpeg"]
